src/RowsParser.java
// Generated from Rows.g4 by ANTLR 4.2.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RowsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		XOBJ=1, NOBJ=2, DIVIDE=3, MULTIPLY=4, MINUS=5, PLUS=6, GT=7, EXPR=8, FLOATATOM=9, 
		OSC=10, DAC=11, METRO=12, MOD=13, FCOUNTER=14, SIG=15, CLIP=16, BP=17, 
		HIP=18, LOP=19, OBJ=20, CANVAS=21, CONNECT=22, MSG=23, POW=24, LINE=25, 
		UNPACK=26, INT=27, FLOAT=28, DIGIT=29, TRIGGER=30, BANG=31, VAR=32, STRING=33, 
		SEMICOLON=34, LPAREN=35, RPAREN=36, TAB=37, NL=38;
	public static final String[] tokenNames = {
		"<INVALID>", "'#X'", "'#N'", "DIVIDE", "MULTIPLY", "MINUS", "PLUS", "'>'", 
		"'expr'", "'floatatom'", "'osc~'", "'dac~'", "'metro'", "'mod'", "'fcounter'", 
		"'sig~'", "'clip~'", "'bp~'", "'hip~'", "'lop~'", "'obj'", "'canvas'", 
		"'connect'", "'msg'", "'pow'", "'line~'", "'unpack'", "INT", "FLOAT", 
		"DIGIT", "'trigger'", "'bng'", "VAR", "STRING", "';'", "'('", "')'", "TAB", 
		"NL"
	};
	public static final int
		RULE_file = 0, RULE_row = 1, RULE_expr = 2;
	public static final String[] ruleNames = {
		"file", "row", "expr"
	};

	@Override
	public String getGrammarFileName() { return "Rows.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RowsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(6); row();
				}
				}
				setState(9); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==XOBJ || _la==NOBJ );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public Token type;
		public Token name;
		public Token number;
		public TerminalNode CLIP() { return getToken(RowsParser.CLIP, 0); }
		public TerminalNode STRING(int i) {
			return getToken(RowsParser.STRING, i);
		}
		public TerminalNode CANVAS() { return getToken(RowsParser.CANVAS, 0); }
		public List<TerminalNode> INT() { return getTokens(RowsParser.INT); }
		public TerminalNode SIG() { return getToken(RowsParser.SIG, 0); }
		public TerminalNode MSG() { return getToken(RowsParser.MSG, 0); }
		public TerminalNode LOP() { return getToken(RowsParser.LOP, 0); }
		public TerminalNode INT(int i) {
			return getToken(RowsParser.INT, i);
		}
		public TerminalNode DIVIDE() { return getToken(RowsParser.DIVIDE, 0); }
		public TerminalNode HIP() { return getToken(RowsParser.HIP, 0); }
		public TerminalNode NL(int i) {
			return getToken(RowsParser.NL, i);
		}
		public TerminalNode XOBJ() { return getToken(RowsParser.XOBJ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode FLOAT(int i) {
			return getToken(RowsParser.FLOAT, i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OBJ() { return getToken(RowsParser.OBJ, 0); }
		public TerminalNode PLUS() { return getToken(RowsParser.PLUS, 0); }
		public TerminalNode OSC() { return getToken(RowsParser.OSC, 0); }
		public TerminalNode LINE() { return getToken(RowsParser.LINE, 0); }
		public List<TerminalNode> NL() { return getTokens(RowsParser.NL); }
		public TerminalNode SEMICOLON() { return getToken(RowsParser.SEMICOLON, 0); }
		public TerminalNode FLOATATOM() { return getToken(RowsParser.FLOATATOM, 0); }
		public List<TerminalNode> FLOAT() { return getTokens(RowsParser.FLOAT); }
		public TerminalNode BP() { return getToken(RowsParser.BP, 0); }
		public TerminalNode BANG() { return getToken(RowsParser.BANG, 0); }
		public List<TerminalNode> MINUS() { return getTokens(RowsParser.MINUS); }
		public TerminalNode MULTIPLY() { return getToken(RowsParser.MULTIPLY, 0); }
		public TerminalNode EXPR() { return getToken(RowsParser.EXPR, 0); }
		public TerminalNode METRO() { return getToken(RowsParser.METRO, 0); }
		public TerminalNode TRIGGER() { return getToken(RowsParser.TRIGGER, 0); }
		public TerminalNode MINUS(int i) {
			return getToken(RowsParser.MINUS, i);
		}
		public TerminalNode NOBJ() { return getToken(RowsParser.NOBJ, 0); }
		public TerminalNode DAC() { return getToken(RowsParser.DAC, 0); }
		public TerminalNode CONNECT() { return getToken(RowsParser.CONNECT, 0); }
		public TerminalNode FCOUNTER() { return getToken(RowsParser.FCOUNTER, 0); }
		public TerminalNode GT() { return getToken(RowsParser.GT, 0); }
		public TerminalNode UNPACK() { return getToken(RowsParser.UNPACK, 0); }
		public List<TerminalNode> STRING() { return getTokens(RowsParser.STRING); }
		public TerminalNode MOD() { return getToken(RowsParser.MOD, 0); }
		public TerminalNode POW() { return getToken(RowsParser.POW, 0); }
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).exitRow(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_row);
		int _la;
		try {
			setState(296);
			switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(11); match(XOBJ);
				setState(12); ((RowContext)_localctx).type = match(CONNECT);
				setState(14);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(13); match(INT);
					}
					break;
				}
				setState(17);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(16); match(INT);
					}
					break;
				}
				setState(20);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(19); match(INT);
					}
					break;
				}
				setState(23);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(22); match(INT);
					}
				}

				setState(25); match(SEMICOLON);
				setState(26); match(NL);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(27); match(XOBJ);
				setState(28); ((RowContext)_localctx).type = match(OBJ);
				setState(29); match(INT);
				setState(30); match(INT);
				setState(31); ((RowContext)_localctx).name = match(OSC);
				setState(33);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(32); match(INT);
					}
				}

				setState(35); match(SEMICOLON);
				setState(36); match(NL);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(37); match(XOBJ);
				setState(38); ((RowContext)_localctx).type = match(OBJ);
				setState(39); match(INT);
				setState(40); match(INT);
				setState(41); ((RowContext)_localctx).name = match(DAC);
				setState(42); match(SEMICOLON);
				setState(43); match(NL);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(44); match(NOBJ);
				setState(45); ((RowContext)_localctx).type = match(CANVAS);
				setState(47);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(46); match(INT);
					}
					break;
				}
				setState(50);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(49); match(INT);
					}
					break;
				}
				setState(53);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(52); match(INT);
					}
					break;
				}
				setState(56);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(55); match(INT);
					}
					break;
				}
				setState(59);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(58); match(INT);
					}
				}

				setState(61); match(SEMICOLON);
				setState(62); match(NL);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(63); match(XOBJ);
				setState(64); ((RowContext)_localctx).type = match(FLOATATOM);
				setState(66);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(65); match(INT);
					}
					break;
				}
				setState(69);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(68); match(INT);
					}
					break;
				}
				setState(72);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(71); match(INT);
					}
					break;
				}
				setState(75);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(74); match(INT);
					}
					break;
				}
				setState(78);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(77); match(INT);
					}
					break;
				}
				setState(81);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(80); match(INT);
					}
				}

				setState(83); match(MINUS);
				setState(84); match(MINUS);
				setState(85); match(MINUS);
				setState(86); match(SEMICOLON);
				setState(87); match(NL);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88); match(XOBJ);
				setState(89); ((RowContext)_localctx).type = match(OBJ);
				setState(90); match(INT);
				setState(91); match(INT);
				setState(92); ((RowContext)_localctx).name = match(PLUS);
				setState(94);
				_la = _input.LA(1);
				if (_la==INT || _la==FLOAT) {
					{
					setState(93);
					((RowContext)_localctx).number = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
						((RowContext)_localctx).number = (Token)_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(96); match(SEMICOLON);
				setState(97); match(NL);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(98); match(XOBJ);
				setState(99); ((RowContext)_localctx).type = match(OBJ);
				setState(100); match(INT);
				setState(101); match(INT);
				setState(102); ((RowContext)_localctx).name = match(MINUS);
				setState(104);
				_la = _input.LA(1);
				if (_la==INT || _la==FLOAT) {
					{
					setState(103);
					((RowContext)_localctx).number = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
						((RowContext)_localctx).number = (Token)_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(106); match(SEMICOLON);
				setState(107); match(NL);
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(108); match(XOBJ);
				setState(109); ((RowContext)_localctx).type = match(OBJ);
				setState(110); match(INT);
				setState(111); match(INT);
				setState(112); ((RowContext)_localctx).name = match(MULTIPLY);
				setState(114);
				_la = _input.LA(1);
				if (_la==INT || _la==FLOAT) {
					{
					setState(113);
					((RowContext)_localctx).number = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
						((RowContext)_localctx).number = (Token)_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(116); match(SEMICOLON);
				setState(117); match(NL);
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(118); match(XOBJ);
				setState(119); ((RowContext)_localctx).type = match(OBJ);
				setState(120); match(INT);
				setState(121); match(INT);
				setState(122); ((RowContext)_localctx).name = match(DIVIDE);
				setState(124);
				_la = _input.LA(1);
				if (_la==INT || _la==FLOAT) {
					{
					setState(123);
					((RowContext)_localctx).number = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
						((RowContext)_localctx).number = (Token)_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(126); match(SEMICOLON);
				setState(127); match(NL);
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(128); match(XOBJ);
				setState(129); ((RowContext)_localctx).type = match(OBJ);
				setState(130); match(INT);
				setState(131); match(INT);
				setState(132); ((RowContext)_localctx).name = match(POW);
				setState(134);
				_la = _input.LA(1);
				if (_la==INT || _la==FLOAT) {
					{
					setState(133);
					((RowContext)_localctx).number = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
						((RowContext)_localctx).number = (Token)_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(136); match(SEMICOLON);
				setState(137); match(NL);
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(138); match(XOBJ);
				setState(139); ((RowContext)_localctx).type = match(OBJ);
				setState(140); match(INT);
				setState(141); match(INT);
				setState(142); ((RowContext)_localctx).name = match(TRIGGER);
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(143);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					setState(146); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0) );
				setState(148); match(SEMICOLON);
				setState(149); match(NL);
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(150); match(XOBJ);
				setState(151); ((RowContext)_localctx).type = match(OBJ);
				setState(152); match(INT);
				setState(153); match(INT);
				setState(154); ((RowContext)_localctx).name = match(BANG);
				setState(155); match(INT);
				setState(156); match(INT);
				setState(157); match(INT);
				setState(158); match(INT);
				setState(159); match(STRING);
				setState(160); match(STRING);
				setState(161); match(STRING);
				setState(162); match(INT);
				setState(163); match(INT);
				setState(164); match(INT);
				setState(165); match(INT);
				setState(166); expr(0);
				setState(167); expr(0);
				setState(168); match(NL);
				setState(169); expr(0);
				setState(170); match(SEMICOLON);
				setState(171); match(NL);
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(173); match(XOBJ);
				setState(174); ((RowContext)_localctx).type = match(OBJ);
				setState(175); match(INT);
				setState(176); match(INT);
				setState(177); ((RowContext)_localctx).name = match(EXPR);
				setState(178); expr(0);
				setState(179); match(SEMICOLON);
				setState(180); match(NL);
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(182); match(XOBJ);
				setState(183); ((RowContext)_localctx).type = match(MSG);
				setState(184); match(INT);
				setState(185); match(INT);
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==INT || _la==FLOAT) {
					{
					{
					setState(186);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					setState(191);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(192); match(SEMICOLON);
				setState(193); match(NL);
				}
				break;

			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(194); match(XOBJ);
				setState(195); ((RowContext)_localctx).type = match(OBJ);
				setState(196); match(INT);
				setState(197); match(INT);
				setState(198); ((RowContext)_localctx).name = match(METRO);
				setState(199); match(INT);
				setState(200); match(SEMICOLON);
				setState(201); match(NL);
				}
				break;

			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(202); match(XOBJ);
				setState(203); ((RowContext)_localctx).type = match(OBJ);
				setState(204); match(INT);
				setState(205); match(INT);
				setState(206); ((RowContext)_localctx).name = match(FCOUNTER);
				setState(207); match(SEMICOLON);
				setState(208); match(NL);
				}
				break;

			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(209); match(XOBJ);
				setState(210); ((RowContext)_localctx).type = match(OBJ);
				setState(211); match(INT);
				setState(212); match(INT);
				setState(213); ((RowContext)_localctx).name = match(MOD);
				setState(214); match(INT);
				setState(215); match(SEMICOLON);
				setState(216); match(NL);
				}
				break;

			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(217); match(XOBJ);
				setState(218); ((RowContext)_localctx).type = match(OBJ);
				setState(219); match(INT);
				setState(220); match(INT);
				setState(221); ((RowContext)_localctx).name = match(CLIP);
				setState(222); expr(0);
				setState(223); expr(0);
				setState(224); match(SEMICOLON);
				setState(225); match(NL);
				}
				break;

			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(227); match(XOBJ);
				setState(228); ((RowContext)_localctx).type = match(OBJ);
				setState(229); match(INT);
				setState(230); match(INT);
				setState(231); ((RowContext)_localctx).name = match(BP);
				setState(232); expr(0);
				setState(233); expr(0);
				setState(234); match(SEMICOLON);
				setState(235); match(NL);
				}
				break;

			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(237); match(XOBJ);
				setState(238); ((RowContext)_localctx).type = match(OBJ);
				setState(239); match(INT);
				setState(240); match(INT);
				setState(241); ((RowContext)_localctx).name = match(HIP);
				setState(243);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR) | (1L << LPAREN))) != 0)) {
					{
					setState(242); expr(0);
					}
				}

				setState(245); match(SEMICOLON);
				setState(246); match(NL);
				}
				break;

			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(247); match(XOBJ);
				setState(248); ((RowContext)_localctx).type = match(OBJ);
				setState(249); match(INT);
				setState(250); match(INT);
				setState(251); ((RowContext)_localctx).name = match(LOP);
				setState(253);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR) | (1L << LPAREN))) != 0)) {
					{
					setState(252); expr(0);
					}
				}

				setState(255); match(SEMICOLON);
				setState(256); match(NL);
				}
				break;

			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(257); match(XOBJ);
				setState(258); ((RowContext)_localctx).type = match(OBJ);
				setState(259); match(INT);
				setState(260); match(INT);
				setState(261); ((RowContext)_localctx).name = match(GT);
				setState(263);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR) | (1L << LPAREN))) != 0)) {
					{
					setState(262); expr(0);
					}
				}

				setState(265); match(SEMICOLON);
				setState(266); match(NL);
				}
				break;

			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(267); match(XOBJ);
				setState(268); ((RowContext)_localctx).type = match(OBJ);
				setState(269); match(INT);
				setState(270); match(INT);
				setState(271); ((RowContext)_localctx).name = match(LINE);
				setState(272); match(SEMICOLON);
				setState(273); match(NL);
				}
				break;

			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(274); match(XOBJ);
				setState(275); ((RowContext)_localctx).type = match(OBJ);
				setState(276); match(INT);
				setState(277); match(INT);
				setState(278); ((RowContext)_localctx).name = match(UNPACK);
				setState(280); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(279);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					setState(282); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0) );
				setState(284); match(SEMICOLON);
				setState(285); match(NL);
				}
				break;

			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(286); match(XOBJ);
				setState(287); ((RowContext)_localctx).type = match(OBJ);
				setState(288); match(INT);
				setState(289); match(INT);
				setState(290); ((RowContext)_localctx).name = match(SIG);
				setState(292);
				_la = _input.LA(1);
				if (_la==INT || _la==FLOAT) {
					{
					setState(291);
					((RowContext)_localctx).number = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==FLOAT) ) {
						((RowContext)_localctx).number = (Token)_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(294); match(SEMICOLON);
				setState(295); match(NL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MinusContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(RowsParser.MINUS, 0); }
		public MinusContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).exitMinus(this);
		}
	}
	public static class ParenContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RowsParser.RPAREN, 0); }
		public TerminalNode LPAREN() { return getToken(RowsParser.LPAREN, 0); }
		public ParenContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).enterParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).exitParen(this);
		}
	}
	public static class MulDivContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MULTIPLY() { return getToken(RowsParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(RowsParser.DIVIDE, 0); }
		public MulDivContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).enterMulDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).exitMulDiv(this);
		}
	}
	public static class SingleContext extends ExprContext {
		public TerminalNode FLOAT() { return getToken(RowsParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(RowsParser.INT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode MINUS() { return getToken(RowsParser.MINUS, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode VAR() { return getToken(RowsParser.VAR, 0); }
		public TerminalNode PLUS() { return getToken(RowsParser.PLUS, 0); }
		public SingleContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).enterSingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RowsListener ) ((RowsListener)listener).exitSingle(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(306);
			switch (_input.LA(1)) {
			case MINUS:
				{
				_localctx = new MinusContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(299); match(MINUS);
				setState(300); expr(2);
				}
				break;
			case INT:
			case FLOAT:
			case VAR:
				{
				_localctx = new SingleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(301);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << VAR))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			case LPAREN:
				{
				_localctx = new ParenContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(302); match(LPAREN);
				setState(303); expr(0);
				setState(304); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(316);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(314);
					switch ( getInterpreter().adaptivePredict(_input,31,_ctx) ) {
					case 1:
						{
						_localctx = new MulDivContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(308);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(309);
						_la = _input.LA(1);
						if ( !(_la==DIVIDE || _la==MULTIPLY) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(310); expr(5);
						}
						break;
